; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_check_smep_smap.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_check_smep_smap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [53 x i8] c"[-] SMAP/SMEP detected, use ENABLE_SMEP_SMAP_BYPASS\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@CR4_DESIRED_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_smep_smap() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @smap_smep_enabled()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp sge i32 %3, 1
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 @dprintf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @EXIT_FAILURE, align 4
  %8 = call i32 @exit(i32 %7) #3
  unreachable

9:                                                ; preds = %0
  %10 = load i32, i32* %1, align 4
  switch i32 %10, label %14 [
    i32 1, label %11
    i32 2, label %12
    i32 3, label %13
  ]

11:                                               ; preds = %9
  store i32 263904, i32* @CR4_DESIRED_VALUE, align 4
  br label %14

12:                                               ; preds = %9
  store i32 264176, i32* @CR4_DESIRED_VALUE, align 4
  br label %14

13:                                               ; preds = %9
  store i32 264176, i32* @CR4_DESIRED_VALUE, align 4
  br label %14

14:                                               ; preds = %9, %13, %12, %11
  ret void
}

declare dso_local i32 @smap_smep_enabled(...) #1

declare dso_local i32 @dprintf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
